@@ -6,6 +6,7 @@
 
 
 - C API [joes]
+  Support "multipart/mixed" file uploads.
   Support XForms' "multipart/related" enctype.
 
 - C API [joes]
@@ -13,6 +14,7 @@
   hook around APR's expat-based apr_xml_parser.  Add a generic
   parser apreq_parse_generic() to parse arbitrary enctypes using
   the hook API.
+
 
 @section v2_04_dev Changes with libapreq2-2.04-dev (released August 30, 2004)
 
